--- a/webapp/Dockerfile
+++ b/webapp/Dockerfile
@@ -8,7 +8,8 @@ ENV POSTGRESQL_USER=vmaas_user
 ENV POSTGRESQL_PASSWORD=vmaas_passwd
 ENV POSTGRESQL_DATABASE=vmaas
 
-RUN yum -y update && yum -y install python-tornado python-psycopg2 postgresql && rm -rf /var/cache/yum/*
+RUN yum -y update && yum install epel-release && yum -y install python-pip python-tornado python-psycopg2 postgresql && rm -rf /var/cache/yum/*
+RUN pip install apispec
 
 ADD ./wait-for-postgres.sh /app/wait-for-postgres.sh
 ADD ./entrypoint.sh /app/
