chore(webapp): log requests
VMAAS-1395

--- a/conf/webapp.env
+++ b/conf/webapp.env
@@ -3,7 +3,7 @@ REPOSCAN_PORT=8081
 WEBSOCKET_HOST=vmaas_websocket
 MAX_VMAAS_SERVERS=1
 LOGGING_LEVEL_APP=INFO
-LOGGING_LEVEL_LIBS=WARNING
+LOGGING_LEVEL_LIBS=INFO
 LOGGING_TYPE=DEVEL
 GZIP_RESPONSE_ENABLE=off
 GZIP_COMPRESS_LEVEL=5
